src/components/CollectionsAndPalettes/common/ItemCard/ItemCard.module.scss
@import "styles/global";
@import "styles/variablesscss.scss";

.itemCard {
  --number-of-cards: 4;
  --lateral-padding: 100px;
  --masonry-spacing: 20px;
  height: 100% !important;

  &.collectionCard {
    height: 410px !important;
    position: relative;
    display: grid;
    grid-template-rows: 85% 15%;

    img {
      object-fit: cover;
      min-width: 100% !important;
      max-width: 100% !important;
      max-height: 100% !important;
      min-height: 100% !important;
      height: unset !important;
      width: 100% !important;
      margin: 0 !important;
      border-radius: 0 !important;
    }
  }

  @media (max-width: 970px) {
    --lateral-padding: 15px;
  }

  @media (max-width: 920px) {
    --number-of-cards: 3;
  }

  @media (max-width: 650px) {
    --number-of-cards: 2;
  }

  @media (max-width: 400px) {
    --number-of-cards: 1;
  }

  width: 100%;
  border-radius: var(--card-border-radius-bg);
  overflow: hidden;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.08);
  height: fit-content;
  cursor: pointer;
  position: relative;

  &.imageModeCard {
    .infoContainer,
    .sampleCart {
      visibility: hidden;
    }

    .infoImage {
      border-radius: 0;
    }

    &:hover {
      .infoContainer,
      .sampleCart {
        visibility: visible;
      }

      .infoImage {
        border-bottom-left-radius: 30px;
        border-bottom-right-radius: 30px;
      }
    }
  }

  &.editModeCard {
    .imageContainer {
      img {
        border-radius: 0;
      }
    }
  }

  .imageContainer {
    position: relative;
    width: 100%;
    height: 100%;

    .priceIndicator {
      position: absolute;
      bottom: 3%;
      right: 5%;
      background: $warm-gray-color;
      border-radius: var(--card-border-radius-bg);
      font-size: var(--font-size-sm);
      padding: $margin-small $margin-small-2;
    }

    .editButton {
      position: absolute;
      cursor: pointer;
      box-shadow: -2px -2px 5px 0 rgba(255, 254, 254, 0.2);
      border: solid 1px rgba(255, 255, 255, 0.1);
      background-color: rgba(249, 247, 245, 0.5);
      padding: 10px;
      border-radius: 5px;

      &:hover {
        background-color: darken(rgba(249, 247, 245, 0.5), 2%);
        box-shadow: -2px -2px 5px 0 rgba(255, 254, 254, 0.3);

        i {
          color: lighten($primary-color-user, 5%);
        }
      }

      &:active {
        background-color: darken(rgba(249, 247, 245, 0.5), 5%);
        box-shadow: -2px -2px 5px 0 rgba(255, 254, 254, 0.3);

        i {
          color: lighten($primary-color-user, 8%);
        }
      }

      &.delete {
        bottom: 3%;
        left: 3%;
      }
    }

    img {
      width: 100%;
      margin-bottom: -5px;
      object-fit: cover;
      border-bottom-left-radius: 30px;
      border-bottom-right-radius: 30px;
    }

    .sampleCart {
      position: absolute;
      cursor: pointer;
      bottom: 90px;
      left: 5%;
      border-radius: 5px;
      font-size: var(--font-size-md);
      color: rgba(#111111, 0.9);
      display: flex;
      align-items: center;
      box-shadow: -2px -2px 5px 0 rgba(255, 254, 254, 0.2);
      border: solid 1px rgba(255, 255, 255, 0.2);
      background-color: rgba(249, 247, 245, 0.5);
      padding: 10px;

      .addCartIcon {
        font-size: var(--font-size-xl);
      }

      .sampleText {
        padding: 0 15px 0 7px;
      }
    }
  }

  .infoContainer {
    position: relative;
    display: flex;
    flex-direction: column;
    row-gap: 3px;
    border: solid 1px rgba(#ccb79e, 0.1);
    border-top: none;
    font-size: var(--font-size-md);
    color: rgba(#615c58, 0.6);
    padding: 9px 15px;
    border-radius: var(--card-border-radius-bg);
    border-top-left-radius: 0;
    border-top-right-radius: 0;

    &.privateCard {
      flex-direction: column;
      row-gap: 5px;

      i {
        margin-right: 5px;
      }
    }

    &.infoMode {
      position: absolute;
      background-color: white;
      bottom: 0;
      //width: 100%;
      margin-bottom: -1px;
      border: 2px solid white;
      width: 101%;
      right: -1px;
    }

    .textContainer {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
    }

    .darker {
      color: #615c58;
    }

    .priceIndicator {
      position: absolute;
      bottom: 15%;
      right: 5%;
      background: $warm-gray-color;
      font-size: var(--font-size-sm);
      padding: 9px 11px;
      border-radius: 24px;
    }
  }
}

